# django-cookiecutter-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  {{cookiecutter._env_file_sample}}  {{cookiecutter._env_file}}
{{cookiecutter.project_name}}/apps/auth/: apps.py  models.py
{{cookiecutter.project_name}}/apps/auth/api/v1/: urls.py
{{cookiecutter.project_name}}/apps/core/: apps.py  constants.py  exeptions.py  factories.py  helpers.py  models.py  permissions.py  selectors.py  serializers.py  services.py  tests.py  urls.py  views.py
{{cookiecutter.project_name}}/apps/todo/: apps.py  factories.py  models.py
{{cookiecutter.project_name}}/apps/todo/api/v1/: selectors.py  serializers.py  services.py  urls.py  (+1 more)
{{cookiecutter.project_name}}/apps/todo/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/apps/users/: factories.py  models.py  selectors.py  serializers.py
{{cookiecutter.project_name}}/apps/users/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/config/: urls.py  workers.py
{{cookiecutter.project_name}}/config/settings/: __init__.py  base.py  local.py
{{cookiecutter.project_name}}/deployments/: docker-compose.yaml
{{cookiecutter.project_name}}/deployments/dev/: Dockerfile
{{cookiecutter.project_name}}/docker/local/: Dockerfile
{{cookiecutter.project_name}}/docker/production/: Dockerfile  entrypoint.sh
{{cookiecutter.project_name}}/requirements/: base.txt  development.txt  local.txt  production.txt
(+7 files in other folders)
